# Markowitz-Optimizer

./: README.rst  pyproject.toml
markowitz_optimizer/: app.py  clean.py  generate.py  ingest.py  simulate.py
