[tool.poetry]
name = "markowitz_optimizer"
version = "0.1.0"
description = ""
authors = ["MonkeyDoug <immortalgamerdc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.3.3"
yfinance = "^0.1.63"
numpy = "^1.21.2"
scipy = "^1.7.1"
seaborn = "^0.11.2"
streamlit = "^1.1.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
